Mon Jul 26 16:52:34 1999  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* sdicf.el: Append file-name-coding-system in sdic-call-process for XEmacs.

Mon Jul 26 14:04:24 1999  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* sdic.el.in,sdic.texi: Add exposition of key-bind.

Mon Jul 26 10:27:07 1999  Hideyuki Shirai <shirai@rdmg.mgcs.mei.co.jp>

	* INSTALL,lisp/sdic.el.in: Modify document of setting for Emacs20
	  and XEmacs.

Mon Jul 26 00:41:42 1999  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>

	* configure.in: Bug fix: substitution for EIJIROU_DIR and
 	WAEIJIROU_DIR

Sun Jul 25 13:00:15 1999  Masatoshi Tsuchiya  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* Release SDIC-2.1-pre1.

Fri Jul 23 19:06:54 1999  Masatoshi Tsuchiya  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* install.el.in: Following the change of dictionary naming rule.

	* contrib/gene.perl (sdic_to_compat): Some fixes.

1999-07-23  Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>

	* lisp/Makefile.am, configure.in: eedict.dic support
	  by using `contrib/gene.perl --sdic-to-compat'

	* lisp/sdic.el: Apply Tsuchiya's patch [sdic:00295] and Modify it 
	  little a bit.

	* configure.in: Support multiple dictionaries.

	* Makefile.am:  Add entries for edict's family.
	  4jwords, compdic,enamdict

	* lisp/elisp-comp: Modify one line.
	  (load "sdic.el.in")  -> (load "sdic.el")

Fri Jul 23 17:04:18 1999  Hideyuki Shirai <shirai@rdmg.mgcs.mei.co.jp>

	* contrib/{edict.perl,eijirou.perl,gene.perl,jgene.perl}:
	  Add code for Windows.

	* install.el.in: Some bug fixes and update code to decide
	  `make-sdic-lisp-directory' for Mule-for-Windows.

1999-07-22  Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>

	* configure.in: Change default DICTDIR.

	* lisp/sdic.el: Replace %{EIWA,WAEI}_DICTIONARY_PATH% with
	  %{EIWA,WAEI}_DICT_PATH% ; notation changed.
	
1999-07-21  Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>

	* configure.in, Makefile.am: Add a feature to detect `WAEIJIROU'