@@ -1,6 +1,12 @@
+Mon Jul 26 18:01:04 1999  Masatoshi Tsuchiya  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
+
+	* configure.in: Update script to generate `WAEI_DICT_LIST' and
+ 	  `EIWA_DICT_LIST'.
+
 Mon Jul 26 16:52:34 1999  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>
 
-	* sdicf.el: Append file-name-coding-system in sdic-call-process for XEmacs.
+	* sdicf.el (sdic-call-process): Add local binding of
+	  `file-name-coding-system' for XEmacs.
 
 Mon Jul 26 14:04:24 1999  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>
 
